take way too long to resolve issue #41 which makes the video to be annotated no longer full screen and possibly resolve issue where video was loading full screen in ios

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -128,8 +128,13 @@
   border-style: solid;
 }
 .video-container{
-  width: 500px !important;
-  height: auto !important;
+  // width: 45% !important;
+  // height: 45% !important;
+}
+
+iframe{
+  width: 50% !important!important;
+  height: 400px !important!important;
 }
 
 .attention{
